@@ -1,6 +1,3 @@
-* reverse iso
 * consider other list-like optics
 * tests
 * Lazy version of Text
-* Reversing, Plated
-* Cons1, Snoc1
